@@ -33,6 +33,7 @@ the future, the admin web ui + guard).
 * Ensured that proxies services set a unique name.
 * Updated the convenience functions in application.service to use index-based
 names.
+* Fixed some bugs in the application subpackage.
 
 2008.06.27 oubiwann
 
